<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityMain">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/game_IMG_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background"
        android:scaleType="centerCrop"
        android:alpha="0.8" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="32dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"

            android:text="@string/table_score"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold"
            android:background="@drawable/circle_shape"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nickname"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/score"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/distance"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/top_players_LAY_frameTop10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"/>

        <FrameLayout
            android:id="@+id/top_players_LAY_frameMap"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:padding="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/score_BTN_backToMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/back_to_menu"
            android:textSize="20sp"
            android:backgroundTint="#8C113C"
            app:cornerRadius="30dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>